<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_choice_level"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_17sdp"
        android:textColor="@color/colorPrimaryDark"
        />


        />
    <Button
        android:id="@+id/btnDe"
        android:text="@string/text_level_easy"
        style="@style/PlayScreenButton"

        />
    <Button
        android:id="@+id/btnTB"
        style="@style/PlayScreenButton"
        android:text="@string/text_level_midium"/>
    <Button
        android:id="@+id/btnKho"
        style="@style/PlayScreenButton"
        android:text="@string/text_level_di"/>


</LinearLayout>