<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/_10sdp"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/khoa"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/text_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"

        />
<!--        android:layout_centerHorizontal="true" -->

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_70sdp"
        android:layout_below="@+id/tvTitle"
        android:orientation="horizontal" >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical" >

    <Button
        android:id="@+id/btnPlay"
        style="@style/HomeButton"
        android:text="@string/text_play" />

    <Button
        android:id="@+id/btnDiem"
        style="@style/HomeButton"
        android:text="@string/text_score" />

    <Button
        android:id="@+id/btnGuide"
        style="@style/HomeButton"
        android:text="@string/text_guide" />

    <Button
        android:id="@+id/btnExit"
        style="@style/HomeButton"
        android:text="@string/text_exit" />

    </LinearLayout>
        <FrameLayout
            android:id="@+id/frHome"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_minus5sdp"

            android:background="#85BBD3"

            >

        </FrameLayout>
    </LinearLayout>
</RelativeLayout>